<resources>
    <string name="app_name">HollywoodDB</string>

    <!--My want to hide this-->
    <string name="tmdb_api_key">83f458fcc7c923112569dd3faec43ec7</string>

    <!--detail activity-->
    <string name="detail_original">Original Title:</string>
    <string name="detail_genre">Genre:</string>
    <string name="detail_revenue">Revenue:</string>
    <string name="detail_budget">Budget:</string>
    <string name="detail_status">Status:</string>
    <string name="detail_card_cast">Cast</string>
    <string name="detail_card_details">Details</string>
    <string name="detail_card_overview">Overview</string>

    <!--Card Titles-->
    <!--movies-->
    <string name="card_title_popular_movies">Popular Movies</string>
    <string name="card_title_newest_movies">Newest Movies</string>
    <string name="card_title_top_rated_movies">Top Rated</string>
    <string name="card_title_upcoming_movies">Upcoming Movies</string>
    <string name="card_title_now_playing_movies">Now Playing</string>

    <!--tv-->
    <string name="card_title_airing_today">On Today</string>
    <string name="card_title_popular_tv">Popular TV</string>
    <string name="card_title_on_the_air_tv">New Episodes</string>
    <string name="card_title_top_rated_tv">Top Rated</string>


    <!--Bottom Navigation-->
    <string name="bot_nav_home">Home</string>
    <string name="bot_nav_movies">Movies</string>
    <string name="bot_nav_tv">TV</string>
    <string name="bot_nav_favorites">Favorites</string>
    <string name="bot_nav_history">History</string>
    <string name="main_action_search">Search</string>
    <string name="action_dummy">Dummy</string>
    <string name="card_airing_today_tv">Newest TV</string>

    <!--Content Description-->
    <string name="content_desc_poster">Poster Image</string>



</resources>
